--- a/AnyDropMacShareExtention/AnyDropMacShareExtention.csproj
+++ b/AnyDropMacShareExtention/AnyDropMacShareExtention.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{971BF5CE-2049-45B1-AC86-62854E235E27}</ProjectGuid>
     <ProjectTypeGuids>{10CE9E57-9141-4DF0-916A-2C4FD4EE2A73};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
-    <RootNamespace>ShareExtension</RootNamespace>
-    <AssemblyName>ShareExtension</AssemblyName>
+    <RootNamespace>AnyDropMacShareExtention</RootNamespace>
+    <AssemblyName>AnyDropMacShareExtention</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <TargetFrameworkIdentifier>Xamarin.Mac</TargetFrameworkIdentifier>
     <MonoMacResourcePrefix>Resources</MonoMacResourcePrefix>
@@ -35,7 +35,7 @@
     <PackageSigningKey>3rd Party Mac Developer Installer</PackageSigningKey>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
+    <DebugType></DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <DefineConstants></DefineConstants>
